# patch_antenna

./: CHANGELOG.md  MANIFEST.in  examples.py  pyproject.toml  readme.md  setup.py
patch_antenna/: __init__.py  comparison.py  designer.py  export.py  frequency_bands.py  materials.py  validation.py
