[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-antenna-designer"
authors = [
    {name = "Al-Musbahi", email = "musbahi.git@gmail.com"},
    {name = "Bhanuchander Udhayakumar", email = "bhanuchander210@gmail.com"}
]
maintainers = [
    {name = "Leeds SpaceComms"}
]
description = "Advanced patch antenna design with material database and automated Gerber generation"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["antenna", "design", "patch", "microstrip", "rf", "gerber", "pcb"]
dependencies = [
    "scipy>=1.9.0",
    "gerber-writer>=0.3.4"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/space-comms/patch_antenna"
Documentation = "https://github.com/space-comms/patch_antenna#readme"
Repository = "https://github.com/space-comms/patch_antenna"
"Bug Reports" = "https://github.com/space-comms/patch_antenna/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.setuptools_scm]
write_to = "patch_antenna/_version.py"

[tool.setuptools]
packages = ["patch_antenna"]